# css432-tftp

./: .gitignore  CMakeLists.txt  README.md  TftpClient.cpp  TftpServer.cpp  main.cpp  sum2num.cpp  sum2num.h  test.cpp
.github/workflows/: TestTftp.sh  check_no_change.sh  cmake-single-platform.yml  input.txt
